torch-compiler/src/test/resources/negative/EntityWithoutId.java
package negative;

import org.brightify.torch.annotation.Entity;

@Entity
public class EntityWithoutId {

}